--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
-    "antd": "^5.25.2",
+    "antd": "^5.25.3",
     "axios": "^1.8.4",
     "lucide-react": "^0.501.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "moment": "^2.30.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
